# python-project-52

./: .env  Makefile  README.md  build.sh  conftest.py  db.sqlite3  manage.py  pyproject.toml  pytest.ini  setup_path.py
accounts/: apps.py  forms.py  tests.py  tests_django.py  urls.py  views.py
accounts/templates/: confirm_delete.html  user_edit.html  user_list.html
accounts/templatetags/: message_tags.py
accounts/tests/: test_accounts.py
labels/: models.py  tests_labels.py  urls.py  views.py
labels/migrations/: 0001_initial.py
labels/templates/: delete.html  index.html  label_form.html  labels_form.html
labels/tests/: test_labels.py
task_manager/: Makefile  forms.py  settings.py  urls.py  views.py  wsgi.py
task_manager/accounts/: apps.py  forms.py  tests_django.py  urls.py  views.py
task_manager/labels/: forms.py  models.py  urls.py  views.py
task_manager/task_manager/: build.sh  settings.py  urls.py
task_manager/tasks/: forms.py  models.py  urls.py  views.py
tasks/: forms.py  models.py  urls.py  views.py
tasks/migrations/: 0001_initial.py  0002_alter_status_name.py  0003_rename_reference_to_task_assignee.py  0004_alter_task_assignee.py  0005_alter_task_author.py  0006_task_created_at_task_updated_at.py
tasks/tests/: test_statuses.py  test_tasks.py
templates/: index.html
templates/base/: layout.html
templates/includes/: header.html
templates/registration/: login.html  signup.html
tests/: test_accounts.py  test_labels.py
tests/accounts/: test_accounts.py
tests/labels/: test_labels.py
tests/tasks/: test_tasks.py
(+25 files in other folders)
